--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       top: 10px;
       left: 10px;
       font-size: 24px;
-      color: white;
+      color: black;
       font-weight: bold;
     }
 
@@ -81,7 +81,7 @@
 
   let gameStarted = false;
   let lastScore = 0;
-  let gravity = 0.6;
+  let gravity = 0.4;
   let pipeSpeed = 2;
 
   let bird = {
@@ -89,12 +89,12 @@
     y: 150,
     width: 30,
     height: 30,
-    lift: -10,
+    lift: -7,
     velocity: 0
   };
 
   let pipes = [];
-  const pipeWidth = 60;
+  const pipeWidth = 50;
   const pipeGap = 140;
   let score = 0;
 
@@ -109,7 +109,7 @@
   }
 
   function drawBird() {
-    ctx.fillStyle = "yellow";
+    ctx.fillStyle = "black";
     ctx.fillRect(bird.x, bird.y, bird.width, bird.height);
   }
 
