--- a/index.html
+++ b/index.html
@@ -12,210 +12,247 @@
     }
 
     body {
-      background: #70c5ce;
+      background: linear-gradient(to bottom, #70c5ce, #ffffff);
       overflow: hidden;
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     canvas {
       display: block;
       margin: auto;
-      background: #70c5ce;
-      width: 100vw;
-      height: 100vh;
+      background: transparent;
     }
 
     #score, #history {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      left: 20px;
       font-size: 24px;
-      color: black;
+      color: #222;
       font-weight: bold;
+      text-shadow: 1px 1px 3px white;
+    }
+
+    #score {
+      top: 20px;
     }
 
     #history {
-      top: 40px;
+      top: 60px;
       font-size: 18px;
     }
 
     #startBtn, #difficulty {
       position: absolute;
-      top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 15px 30px;
+      transform: translateX(-50%);
       font-size: 20px;
-      background-color: #ffcc00;
+      padding: 15px 30px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      display: block;
       z-index: 10;
+      transition: background 0.3s ease;
+    }
+
+    #startBtn {
+      top: 45%;
+      background-color: #ffcc00;
+    }
+
+    #startBtn:hover {
+      background-color: #e6b800;
     }
 
     #difficulty {
-      top: 60%;
+      top: 55%;
       background-color: #ffffff;
+    }
+
+    #difficulty:hover {
+      background-color: #f0f0f0;
+    }
+
+    #message {
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 20px;
+      background-color: rgba(255, 255, 255, 0.9);
+      border-radius: 12px;
       font-size: 18px;
-      padding: 10px 20px;
+      font-weight: bold;
+      text-align: center;
+      max-width: 90%;
+      z-index: 10;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
   </style>
 </head>
 <body>
+  <div id="score">Score: 0</div>
+  <div id="history">Last Score: 0</div>
+  <div id="message">If you score 30 in Hard, then you will get 100rs. If you score 80 in Easy, then you will get 100rs.</div>
+  <button id="startBtn">START</button>
+  <select id="difficulty">
+    <option value="easy">Easy</option>
+    <option value="hard">Hard</option>
+  </select>
+  <canvas id="gameCanvas" width="400" height="600"></canvas>
 
-<div id="score">Score: 0</div>
-<div id="history">Last Score: 0</div>
-<button id="startBtn">START</button>
-<select id="difficulty">
-  <option value="easy">Easy</option>
-  <option value="hard">Hard</option>
-</select>
-<canvas id="gameCanvas" width="400" height="600"></canvas>
+  <script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+    const startBtn = document.getElementById("startBtn");
+    const difficultySelect = document.getElementById("difficulty");
+    const messageBox = document.getElementById("message");
 
-<script>
-  const canvas = document.getElementById("gameCanvas");
-  const ctx = canvas.getContext("2d");
-  const startBtn = document.getElementById("startBtn");
-  const difficultySelect = document.getElementById("difficulty");
+    let gameStarted = false;
+    let lastScore = 0;
+    let gravity = 0.4;
+    let pipeSpeed = 2;
 
-  let gameStarted = false;
-  let lastScore = 0;
-  let gravity = 0.4;
-  let pipeSpeed = 2;
+    let bird = {
+      x: 50,
+      y: 150,
+      radius: 15,
+      lift: -7,
+      velocity: 0,
+    };
 
-  let bird = {
-    x: 50,
-    y: 150,
-    width: 30,
-    height: 30,
-    lift: -7,
-    velocity: 0
-  };
+    let pipes = [];
+    const pipeWidth = 60;
+    const pipeGap = 140;
+    let score = 0;
 
-  let pipes = [];
-  const pipeWidth = 50;
-  const pipeGap = 140;
-  let score = 0;
-
-  function createPipe() {
-    const topHeight = Math.floor(Math.random() * (canvas.height - pipeGap - 100)) + 20;
-    pipes.push({
-      x: canvas.width,
-      top: topHeight,
-      bottom: topHeight + pipeGap,
-      passed: false
-    });
-  }
-
-  function drawBird() {
-    ctx.fillStyle = "black";
-    ctx.fillRect(bird.x, bird.y, bird.width, bird.height);
-  }
-
-  function drawPipes() {
-    ctx.fillStyle = "green";
-    for (let pipe of pipes) {
-      ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
-      ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
-    }
-  }
-
-  function updateGame() {
-    bird.velocity += gravity;
-    bird.y += bird.velocity;
-
-    if (bird.y + bird.height > canvas.height || bird.y < 0) {
-      resetGame();
+    function createPipe() {
+      const topHeight = Math.floor(Math.random() * (canvas.height - pipeGap - 100)) + 20;
+      pipes.push({
+        x: canvas.width,
+        top: topHeight,
+        bottom: topHeight + pipeGap,
+        passed: false
+      });
     }
 
-    for (let pipe of pipes) {
-      pipe.x -= pipeSpeed;
+    function drawBird() {
+      ctx.beginPath();
+      ctx.arc(bird.x, bird.y, bird.radius, 0, Math.PI * 2);
+      ctx.fillStyle = "#222";
+      ctx.shadowColor = "#000";
+      ctx.shadowBlur = 4;
+      ctx.fill();
+      ctx.closePath();
+      ctx.shadowBlur = 0;
+    }
 
-      if (
-        bird.x < pipe.x + pipeWidth &&
-        bird.x + bird.width > pipe.x &&
-        (bird.y < pipe.top || bird.y + bird.height > pipe.bottom)
-      ) {
+    function drawPipes() {
+      for (let pipe of pipes) {
+        // Pipe Top
+        ctx.fillStyle = "#228B22";
+        ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
+        ctx.shadowColor = "#000";
+        ctx.shadowBlur = 4;
+
+        // Pipe Bottom
+        ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
+        ctx.shadowBlur = 0;
+      }
+    }
+
+    function updateGame() {
+      bird.velocity += gravity;
+      bird.y += bird.velocity;
+
+      if (bird.y + bird.radius > canvas.height || bird.y - bird.radius < 0) {
         resetGame();
       }
 
-      if (!pipe.passed && pipe.x + pipeWidth < bird.x) {
-        pipe.passed = true;
-        score++;
-        document.getElementById("score").textContent = "Score: " + score;
+      for (let pipe of pipes) {
+        pipe.x -= pipeSpeed;
+
+        if (
+          bird.x + bird.radius > pipe.x &&
+          bird.x - bird.radius < pipe.x + pipeWidth &&
+          (bird.y - bird.radius < pipe.top || bird.y + bird.radius > pipe.bottom)
+        ) {
+          resetGame();
+        }
+
+        if (!pipe.passed && pipe.x + pipeWidth < bird.x) {
+          pipe.passed = true;
+          score++;
+          document.getElementById("score").textContent = "Score: " + score;
+        }
       }
+
+      if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - 200) {
+        createPipe();
+      }
+
+      pipes = pipes.filter(pipe => pipe.x + pipeWidth > 0);
     }
 
-    if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - 200) {
-      createPipe();
+    function drawGame() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawBird();
+      drawPipes();
     }
 
-    pipes = pipes.filter(pipe => pipe.x + pipeWidth > 0);
-  }
-
-  function drawGame() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    drawBird();
-    drawPipes();
-  }
-
-  function gameLoop() {
-    if (gameStarted) {
-      updateGame();
-      drawGame();
-    }
-    requestAnimationFrame(gameLoop);
-  }
-
-  function resetGame() {
-    lastScore = score;
-    document.getElementById("history").textContent = "Last Score: " + lastScore;
-
-    bird.y = 150;
-    bird.velocity = 0;
-    pipes = [];
-    score = 0;
-    document.getElementById("score").textContent = "Score: 0";
-    gameStarted = false;
-    startBtn.style.display = "block";
-    difficultySelect.style.display = "block";
-  }
-
-  // Controls
-  document.addEventListener("keydown", function(e) {
-    if (e.code === "Space" && gameStarted) {
-      bird.velocity = bird.lift;
-    }
-  });
-
-  document.addEventListener("touchstart", function() {
-    if (gameStarted) {
-      bird.velocity = bird.lift;
-    }
-  });
-
-  // Start game
-  startBtn.addEventListener("click", function() {
-    resetGame();
-
-    const difficulty = difficultySelect.value;
-    if (difficulty === "easy") {
-      gravity = 0.5;
-      pipeSpeed = 2;
-    } else if (difficulty === "hard") {
-      gravity = 0.7;
-      pipeSpeed = 3.5;
+    function gameLoop() {
+      if (gameStarted) {
+        updateGame();
+        drawGame();
+      }
+      requestAnimationFrame(gameLoop);
     }
 
-    gameStarted = true;
-    startBtn.style.display = "none";
-    difficultySelect.style.display = "none";
-  });
+    function resetGame() {
+      lastScore = score;
+      document.getElementById("history").textContent = "Last Score: " + lastScore;
 
-  // Start the loop
-  gameLoop();
-</script>
+      bird.y = 150;
+      bird.velocity = 0;
+      pipes = [];
+      score = 0;
+      document.getElementById("score").textContent = "Score: 0";
+      gameStarted = false;
+      startBtn.style.display = "block";
+      difficultySelect.style.display = "block";
+      messageBox.style.display = "block";
+    }
 
+    document.addEventListener("keydown", function(e) {
+      if (e.code === "Space" && gameStarted) {
+        bird.velocity = bird.lift;
+      }
+    });
+
+    document.addEventListener("touchstart", function() {
+      if (gameStarted) {
+        bird.velocity = bird.lift;
+      }
+    });
+
+    startBtn.addEventListener("click", function() {
+      resetGame();
+
+      const difficulty = difficultySelect.value;
+      if (difficulty === "easy") {
+        gravity = 0.5;
+        pipeSpeed = 2;
+      } else if (difficulty === "hard") {
+        gravity = 0.7;
+        pipeSpeed = 3.5;
+      }
+
+      gameStarted = true;
+      startBtn.style.display = "none";
+      difficultySelect.style.display = "none";
+      messageBox.style.display = "none";
+    });
+
+    gameLoop();
+  </script>
 </body>
 </html>
